--- a/app/main/templates/main/thing_confirm_delete.html
+++ b/app/main/templates/main/thing_confirm_delete.html
@@ -8,7 +8,7 @@
       <button type="submit" class="btn btn-danger me-2">
         <i class="bi bi-trash"></i> Confirm Delete
       </button>
-      <a href="{% url 'thing_detail' thing.pk %}" class="btn btn-secondary">
+      <a href="{% url 'main:thing_detail' thing.pk %}" class="btn btn-secondary">
         <i class="bi bi-x-circle"></i> Cancel
       </a>
     </div>
