--- a/app/main/templates/main/thing_list.html
+++ b/app/main/templates/main/thing_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>Things</h1>
-  <a href="{% url 'thing_create' %}" class="btn btn-primary mb-3">
+  <a href="{% url 'main:thing_create' %}" class="btn btn-primary mb-3">
     <i class="bi bi-plus-circle"></i> Create New Thing
   </a>
   <ul class="list-group">
