--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}OurMeals.Online{% endblock %}</title>
+        <title>{% block title %}Things{% endblock %}</title>
         {% load static %}
         
         <!-- Bootstrap CSS -->
