--- a/app/voice_chat/templates/voice_chat/index.html
+++ b/app/voice_chat/templates/voice_chat/index.html
@@ -119,7 +119,7 @@
     <!-- Main Content Area -->
     <div class="col-md-9 d-flex flex-column">
       <!-- Transcript Area -->
-      <div id="transcript-container" class="transcript-container bg-white rounded border flex-grow-1 mb-3" data-voice-chat-target="transcript">
+      <div id="transcript-container" data-controller="transcript" class="transcript-container bg-white rounded border flex-grow-1 mb-3" data-transcript-target="container">
         <!-- Transcript content will appear here -->
       </div>
 
