Transcript roughed in

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
         
         <!-- App CSS -->
+        <link rel="stylesheet" href="{% static 'dist/css/index.css' %}">
         {% block extra_css %}{% endblock %}
         {% block extra_js %}{% endblock %}
     </head>
