--- a/app/voice_chat/css/voice_chat_layout.css
+++ b/app/voice_chat/css/voice_chat_layout.css
@@ -5,7 +5,7 @@
     padding: 1rem;
     height: 100%;
     overflow-y: auto;
-    /*max-height: calc(100vh - 120px);*/
+    max-height: calc(100vh - 6rem);
 }
 
 /* Desktop Sidebar */
