AI can create flashcards

--- a/app/voice_chat/templates/voice_chat/_message.html
+++ b/app/voice_chat/templates/voice_chat/_message.html
@@ -1,7 +1,7 @@
 <div style="display: none;">
   <!-- Message template that will be cloned by JavaScript -->
   <template id="message-template">
-    <div class="message">
+    <div class="message mb-3">
       <div class="message-content"></div>
     </div>
   </template>
