--- a/app/flashcards/templates/flashcards/_preview.html
+++ b/app/flashcards/templates/flashcards/_preview.html
@@ -2,11 +2,15 @@
 This partial is used to render a preview of a flashcard in the sidebar
 {% endcomment %}
 
-<div class="card mb-2 flashcard-preview flashcard" 
+<div class="card mb-2 flashcard-preview flashcard border border-2" 
      data-flashcard-id="{{ flashcard.id }}"
      data-flashcard-front-value="{{ flashcard.front }}"
      data-flashcard-back-value="{{ flashcard.back }}">
-  <div class="card-body p-2">
+  <div class="card-body p-2 position-relative">
+    <button class="btn btn-sm btn-outline-primary position-absolute top-0 end-0 mt-1 me-1" 
+            data-action="flashcard#playFullCard">
+      <i class="bi bi-play-fill"></i>
+    </button>
     <div class="flashcard-content">
       <div class="flashcard-front mb-1">
         <small class="text-muted">Front:</small>
@@ -16,12 +20,6 @@ This partial is used to render a preview of a flashcard in the sidebar
         <small class="text-muted">Back:</small>
         <div>{{ flashcard.back }}</div>
       </div>
-    </div>
-    <div class="text-center mt-2">
-      <button class="btn btn-sm btn-primary" 
-              data-action="flashcard#playFullCard">
-        <i class="bi bi-play-fill"></i> Play
-      </button>
     </div>
     {% if flashcard.tags %}
     <div class="flashcard-tags mt-2">
