Auto judgement is kinda working - user needs feedback

--- a/app/flashcards/templates/flashcards/_review.html
+++ b/app/flashcards/templates/flashcards/_review.html
@@ -29,17 +29,17 @@
             <i class="bi bi-play-fill"></i> Play
         </button>
         <button class="btn btn-sm btn-danger" 
-                data-action="flashcard#judgeCard"
+                data-action="flashcard#handleSelfAssessment"
                 data-status="forgot">
             <i class="bi bi-x-lg"></i> Forgot
         </button>
         <button class="btn btn-sm btn-warning" 
-                data-action="flashcard#judgeCard"
+                data-action="flashcard#handleSelfAssessment"
                 data-status="hard">
             <i class="bi bi-dash-lg"></i> Hard
         </button>
         <button class="btn btn-sm btn-success" 
-                data-action="flashcard#judgeCard"
+                data-action="flashcard#handleSelfAssessment"
                 data-status="easy">
             <i class="bi bi-check-lg"></i> Easy
         </button>
