--- a/app/voice_chat/css/voice_chat_layout.css
+++ b/app/voice_chat/css/voice_chat_layout.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    height: 100%;
+    height: calc(100vh - 350px);
     overflow-y: auto;
     transition: height 0.3s ease;
 }
