Rename for render

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <nav class="navbar bg-white border-bottom py-3" style="min-height: 70px;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Voice Anki</a>
+            <a class="navbar-brand" href="/">FlashSpeak</a>
             <button class="d-md-none btn btn-outline-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar">
                 <i class="bi bi-layout-sidebar"></i>
             </button>
